Got rid of deprecated APIs